--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
+        <!--Alejandra Jamileth Ortiz Sanches-->
+        <!--Edward Stiven Lemus Cruz-->
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <div class="container px-4 px-lg-5">
